feat: add materials deliverables projection
